--- a/environment.yml
+++ b/environment.yml
@@ -1,11 +1,11 @@
-name: jupyterhub-on-hadoop
+name: jupyterhub
 channels:
   - conda-forge
   - defaults
 dependencies:
   - python=3.7.2
-  - conda=4.5.12=py37_0
-  - pip=18.1=py37_0
+  - conda=4.5.12
+  - pip=18.1
 
   - jupyterhub
   - jupyterhub-yarnspawner
