--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,13 @@ before_install:
   - sudo ln -s /opt/conda/etc/profile.d/conda.sh /etc/profile.d
 
 install:
-  - conda env create
   - |
+    source /etc/profile.d/conda.sh
+    conda activate base
+
+    conda env create
     conda activate cloudera-dev
+
     pushd cm_ext
 
     mvn -DskipTests install
@@ -23,6 +27,8 @@ install:
 
     install ../bin/validator.sh $CONDA_PREFIX/bin
     install make_manifest/make_manifest.py $CONDA_PREFIX/bin
+
+    popd
 
 script:
   - |
