--- a/csd/descriptor/service.sdl.yaml
+++ b/csd/descriptor/service.sdl.yaml
@@ -73,6 +73,16 @@ keberos: true
 
 # The Service Level Parameters
 parameters:
+- name: configproxy_auth_token
+  configName: CONFIGPROXY_AUTH_TOKEN
+  label: The Configurable Proxy Authentication Token (in base64)
+  description: The token to prevent MITM attacks.
+  required: true
+  configurableInWizard: true
+  sensitive: true
+  type: password
+  conformRegex: '^(?:[A-Za-z0-9+/]{4})*(?:[A-Za-z0-9+/]{2}==|[A-Za-z0-9+/]{3}=)?$'
+  initType: randomBase64
 
 roles:
 - name: JUPYTERHUB_PROXY
@@ -86,6 +96,7 @@ roles:
 
   startRunner:
     environmentVariables:
+      CONFIGPROXY_AUTH_TOKEN: ${configproxy_auth_token}
     program: scripts/start-proxy.sh
 
   commands:
@@ -93,6 +104,10 @@ roles:
   topology:
     maxInstances: 1
     minInstances: 0
+    placementRules:
+    - type: alwaysWith
+      roleType: JUPYTERHUB_HUB
+
 
   parameters:
   - name: proxy_port
@@ -127,6 +142,8 @@ roles:
   pluralLabel: The Hub Instances
 
   startRunner:
+    environmentVariables:
+      CONFIGPROXY_AUTH_TOKEN: ${configproxy_auth_token}
     program: scripts/start-hub.sh
 
   topology:
@@ -139,6 +156,8 @@ roles:
     generators:
     - filename: hub.gflags
       configFormat: gflags
+      excludedParams:
+        - configproxy_auth_token
       additionalConfigs:
         - key: --Proxy.should_start
-          value: false
+          value: "False"
