Only check for errors during travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,10 +37,9 @@ install:
 script:
   - |
     conda activate cloudera-dev
-    set -euf
     pushd parcel
-
+    set -e
     ./build.py
-
+    set +e
     popd
 
